fix margin on mobile
fix margin on mobile

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -98,7 +98,7 @@
 	}
 	.sapMBtn {
 		border-radius: 100px;
-		margin: 100px 50px 300px 73px;
+		margin: 100px 50px 100px 73px;
 		vertical-align: top;
 		background-color: transparent;
 	}
